trunk/Archive2/b1/d3c84f84b1f269/output
main.cpp:16:14: error: unknown type name 'A'
      ClassB(A * A_instance_ptr)
             ^
main.cpp:25:7: error: unknown type name 'A'
      A *A_ptr;
      ^
main.cpp:32:3: error: unknown type name 'A'
  A A_instance;
  ^
main.cpp:36:3: error: unknown type name 'A'
  A* A_ptr;
  ^
main.cpp:38:3: error: unknown type name 'B'
  B B_instance(A_ptr); // commenting this line, the code compiles fine
  ^
main.cpp:25:10: warning: private field 'A_ptr' is not used [-Wunused-private-field]
      A *A_ptr;
         ^
1 warning and 5 errors generated.
